--- a/udatamodul.lfm
+++ b/udatamodul.lfm
@@ -23,7 +23,7 @@ object DM: TDM
     Params = <>
     Macros = <>
     Left = 55
-    Top = 192
+    Top = 168
   end
   object qryAccountInsert: TSQLQuery
     FieldDefs = <>
@@ -59,5 +59,16 @@ object DM: TDM
     Macros = <>
     Left = 144
     Top = 256
+  end
+  object SQLQueryUsers: TSQLQuery
+    FieldDefs = <>
+    SQL.Strings = (
+      'SELECT * from Users'
+    )
+    Options = [sqoAutoCommit]
+    Params = <>
+    Macros = <>
+    Left = 223
+    Top = 32
   end
 end
